<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activities.MainActivity">

        <!--Scroll total bar-->
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout_TotalBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

        </android.support.design.widget.AppBarLayout>

        <!--Mobile-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_8dp"
            android:layout_marginTop="@dimen/spacing_small_8dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_phone_black_24dp"/>

            <LinearLayout
                android:layout_width="@dimen/spacing_zero_0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/spacing_medium_32dp"
                android:layout_marginRight="@dimen/spacing_normal_16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone_et"
                        style="@style/textProfile"
                        android:enabled="false"
                        android:focusable="false"
                        android:fontFamily="sans_serif_condensed"
                        android:hint="@string/phone_title"
                        android:inputType="phone"
                        android:text="@string/phone_text"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/coll_img"
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/spacing_larger_72dp"
            android:background="@color/color_grey_light"/>

        <!--Email-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_8dp"
            android:layout_marginTop="@dimen/spacing_small_8dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_mail_black_24dp"/>

            <LinearLayout
                android:layout_width="@dimen/spacing_zero_0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/spacing_medium_32dp"
                android:layout_marginRight="@dimen/spacing_normal_16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/mail_et"
                        style="@style/textProfile"
                        android:enabled="false"
                        android:focusable="false"
                        android:fontFamily="sans_serif_condensed"
                        android:hint="@string/mail_title"
                        android:inputType="textEmailAddress"
                        android:text="@string/mail_text"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/send_email_img"
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/spacing_larger_72dp"
            android:background="@color/color_grey_light"/>

        <!--social-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_8dp"
            android:layout_marginTop="@dimen/spacing_small_8dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/vk_circle"/>

            <LinearLayout
                android:layout_width="@dimen/spacing_zero_0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/spacing_medium_32dp"
                android:layout_marginRight="@dimen/spacing_normal_16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/vk_profil_id_et"
                        style="@style/textProfile"
                        android:enabled="false"
                        android:focusable="false"
                        android:fontFamily="sans_serif_condensed"
                        android:hint="@string/prof_social_title"
                        android:inputType="text"
                        android:text="@string/prof_social_text"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/open_vk_img"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/spacing_larger_72dp"
            android:background="@color/color_grey_light"/>

        <!--GitHub-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_8dp"
            android:layout_marginTop="@dimen/spacing_small_8dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/github_circle"/>

            <LinearLayout
                android:layout_width="@dimen/spacing_zero_0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/spacing_medium_32dp"
                android:layout_marginRight="@dimen/spacing_normal_16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/repositorii_et"
                        style="@style/textProfile"
                        android:enabled="false"
                        android:focusable="false"
                        android:fontFamily="sans_serif_condensed"
                        android:hint="@string/repozitori_title"
                        android:inputType="textMultiLine"
                        android:text="@string/repozitori_text"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/open_repository_img"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_size"
            android:layout_marginLeft="@dimen/spacing_larger_72dp"
            android:background="@color/color_grey_light"/>

        <!--About-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small_8dp"
            android:layout_marginTop="@dimen/spacing_small_8dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp"/>

            <LinearLayout
                android:layout_width="@dimen/spacing_zero_0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/spacing_medium_32dp"
                android:layout_marginRight="@dimen/spacing_normal_16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/about_et"
                        style="@style/textProfile"
                        android:enabled="false"
                        android:focusable="false"
                        android:fontFamily="sans_serif_condensed"
                        android:hint="@string/about_title"
                        android:inputType="textMultiLine"
                        android:text="@string/about_me"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>