<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_small_8dp"
    app1:cardBackgroundColor="@color/color_white"
    app:cardCornerRadius="@dimens/line_size">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.softdesign.devintensive.ui.views.AspectRatioImageView
                android:id="@+id/user_photo_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/user_foto"
                app1:aspect_ratio="1.78"/>

            <TextView
                android:id="@+id/user_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@string/ff_medium"
                android:paddingBottom="@dimen/spacing_medial_24dp"
                android:paddingLeft="@dimen/spacing_normal_16dp"
                android:paddingRight="@dimen/spacing_normal_16dp"
                android:text="Имя Фамилия"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_large_24"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_larger_72dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/spacing_zero_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rating_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_medium"
                    android:text="0"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_medium_20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_regular"
                    android:text="Рейтинг"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_small_14"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/spacing_zero_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/code_lines_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_medium"
                    android:text="0"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_medium_20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_regular"
                    android:text="Написано строк кода"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_small_14"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/spacing_zero_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/projects_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_medium"
                    android:text="0"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_medium_20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_regular"
                    android:text="Проектов"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_small_14"/>

            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/bio_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/ff_regular"
            android:maxLines="3"
            android:paddingLeft="@dimen/spacing_normal_16dp"
            android:paddingRight="@dimen/spacing_normal_16dp"
            android:text="@string/user_profile.empty_bio"
            android:textColor="@color/color_grey_light"
            android:textSize="@dimen/font_small_14"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_size_1dp"
            android:layout_marginTop="@dimen/spacing_normal_16dp"
            android:background="@color/color_grey_light"/>

        <Button
            android:id="@+id/more_info_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/spacing_normal_16dp"
            android:paddingRight="@dimen/spacing_normal_16dp"
            android:text="@string/more_info_btn"
            android:textColor="@color/color_accent"/>

    </LinearLayout>
</android.support.v7.widget.CardView>
